Add Readme file

--- a/index.html
+++ b/index.html
@@ -12,64 +12,61 @@
   <header>
     <h1 class="title">Awesome Book</h1>
     <ul>
-      <li><a href="" class="list">List</a></li>
-      <li><a href="" class="add">Add New</a></li>
-      <li><a href="" class="contact">Contact</a></li>
+        <li><a href="" class="list">List</a></li>
+        <li><a href="" class="add">Add New</a></li>
+        <li><a href="" class="contact">Contact</a></li>
     </ul>
-  </header>
-  <div class="date-container"><p id="date"></p></div>
-  <main>
-    <h1>All Awasome Book</h1>
+</header>
+<div class="date-container">
+    <p id="date">
 
-    <table class="book-list"></table>
+    </p>
+
+</div>
+<main>
+    <div class="book">
+        <h2>All Awasome Book</h2>
+        <table class="book-list">
+
+        </table>
+    </div>
+
     <div class="add-book-list">
-      
-      <h2>Add new book</h2>
+        <h2>Add new book</h2>
 
-      <form action="#" method="post" class="book-form">
-        <div>
-          <input
-            type="text"
-            placeholder="Title"
-            id="title"
-            required
-            maxlength="50"
-          />
-        </div>
-        <div>
-          <input
-            type="text"
-            placeholder="Author"
-            id="author"
-            required
-            maxlength="20"
-          />
-        </div>
-        <br />
-        <button class="add-btn" type="submit">Add</button>
-      </form>
+        <form action="#" method="post" class="book-form">
+
+
+            <div>
+                <input type="text" placeholder="Title" id="title" required maxlength="50">
+            </div>
+            <div>
+                <input type="text" placeholder="Author" id="author" required maxlength="20">
+            </div>
+
+            <button class="add-btn" type="submit">Add</button>
+        </form>
     </div>
+
     <div class="contact-me">
-      <h2>Contact Information</h2>
-      <p class="contact-desc">
-        Do you have any question or You just want to say <b>"hello"</b>?
-        <br />
-        You can reach out od us!
-      </p>
-      <ul class="contact-list">
-        <li>Our Email: alusinejalloh800@gmail.com / Meshu102@gmail.com</li>
-        <li>Our Phone: +251980631983 / +905338688158</li>
-        <li>
-          Our Address: Nicosia Cyprus . Aymu Sokak / Woldia, Piyassa Ethiopia
-        </li>
-      </ul>
+        <h2>Contact Information</h2>
+        <p class="contact-desc">Do you have any question or You just want to say <b>"hello"</b>? <br> You can reach
+            out od us!</p>
+        <ul class="contact-list">
+            <li>Our Email: alusinejalloh800@gmail.com / Meshu102@gmail.com</li>
+            <li>Our Phone: +251980631983 / +905338688158</li>
+            <li>Our Address: Nicosia Cyprus . Aymu Sokak / Woldia, Piyassa Ethiopia</li>
+        </ul>
     </div>
-  </main>
 
-  <footer>
-    <p class="copy-right">Copyright &copy; 2022 Alusine </p>
-  </footer>
+</main>
+<footer>
+    <p class="copy-right">
+        Copyright &copy; 2022 Alusine
+    </p>
 
-  <script src="index.js"></script>
+</footer>
+
+  <script type="module" src="index.js"></script>
 </body>
 </html>
